feat: improve sql schema add user_flat junction table
