# internal/flatsharing/swagger/flatsharing.swagger.json
@@ -15,14 +15,14 @@
     "application/json"
   ],
   "paths": {
-    "/v1/home": {
+    "/v1/flat": {
       "get": {
-        "operationId": "ListHomes",
+        "operationId": "ListFlats",
         "responses": {
           "200": {
             "description": "",
             "schema": {
-              "$ref": "#/definitions/v1ListHomesResponse"
+              "$ref": "#/definitions/v1ListFlatsResponse"
             }
           }
         },
@@ -42,16 +42,16 @@
           }
         ],
         "tags": [
-          "HomeServices"
+          "FlatServices"
         ]
       },
       "post": {
-        "operationId": "CreateHome",
+        "operationId": "CreateFlat",
         "responses": {
           "200": {
             "description": "",
             "schema": {
-              "$ref": "#/definitions/v1CreateHomeResponse"
+              "$ref": "#/definitions/v1CreateFlatResponse"
             }
           }
         },
@@ -61,52 +61,52 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/v1CreateHomeRequest"
+              "$ref": "#/definitions/v1CreateFlatRequest"
             }
           }
         ],
         "tags": [
-          "HomeServices"
+          "FlatServices"
         ]
       }
     },
-    "/v1/home/{home.id}": {
+    "/v1/flat/{flat.id}": {
       "get": {
-        "operationId": "GetHome",
+        "operationId": "GetFlat",
         "responses": {
           "200": {
             "description": "",
             "schema": {
-              "$ref": "#/definitions/v1GetHomeResponse"
+              "$ref": "#/definitions/v1GetFlatResponse"
             }
           }
         },
         "parameters": [
           {
-            "name": "home.id",
+            "name": "flat.id",
             "in": "path",
             "required": true,
             "type": "string"
           },
           {
-            "name": "home.name",
+            "name": "flat.name",
             "in": "query",
             "required": false,
             "type": "string"
           },
           {
-            "name": "home.created_at",
+            "name": "flat.created_at",
             "in": "query",
             "required": false,
             "type": "string"
           }
         ],
         "tags": [
-          "HomeServices"
+          "FlatServices"
         ]
       },
       "delete": {
-        "operationId": "DeleteHome",
+        "operationId": "DeleteFlat",
         "responses": {
           "200": {
             "description": "",
@@ -117,30 +117,30 @@
         },
         "parameters": [
           {
-            "name": "home.id",
+            "name": "flat.id",
             "in": "path",
             "required": true,
             "type": "string"
           },
           {
-            "name": "home.name",
+            "name": "flat.name",
             "in": "query",
             "required": false,
             "type": "string"
           },
           {
-            "name": "home.created_at",
+            "name": "flat.created_at",
             "in": "query",
             "required": false,
             "type": "string"
           }
         ],
         "tags": [
-          "HomeServices"
+          "FlatServices"
         ]
       },
       "put": {
-        "operationId": "UpdateHome",
+        "operationId": "UpdateFlat",
         "responses": {
           "200": {
             "description": "",
@@ -151,7 +151,7 @@
         },
         "parameters": [
           {
-            "name": "home.id",
+            "name": "flat.id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -161,12 +161,12 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/v1UpdateHomeRequest"
+              "$ref": "#/definitions/v1UpdateFlatRequest"
             }
           }
         ],
         "tags": [
-          "HomeServices"
+          "FlatServices"
         ]
       }
     },
@@ -244,7 +244,7 @@
             "type": "string"
           },
           {
-            "name": "purchase.home_id",
+            "name": "purchase.flat_id",
             "in": "query",
             "required": false,
             "type": "string"
@@ -308,7 +308,7 @@
             "type": "string"
           },
           {
-            "name": "purchase.home_id",
+            "name": "purchase.flat_id",
             "in": "query",
             "required": false,
             "type": "string"
@@ -406,15 +406,15 @@
       "description": "paths: \"f.a\"\n    paths: \"f.b.d\"\n\nHere `f` represents a field in some root message, `a` and `b`\nfields in the message found in `f`, and `d` a field found in the\nmessage in `f.b`.\n\nField masks are used to specify a subset of fields that should be\nreturned by a get operation or modified by an update operation.\nField masks also have a custom JSON encoding (see below).\n\n# Field Masks in Projections\n\nWhen used in the context of a projection, a response message or\nsub-message is filtered by the API to only contain those fields as\nspecified in the mask. For example, if the mask in the previous\nexample is applied to a response message as follows:\n\n    f {\n      a : 22\n      b {\n        d : 1\n        x : 2\n      }\n      y : 13\n    }\n    z: 8\n\nThe result will not contain specific values for fields x,y and z\n(their value will be set to the default, and omitted in proto text\noutput):\n\n\n    f {\n      a : 22\n      b {\n        d : 1\n      }\n    }\n\nA repeated field is not allowed except at the last position of a\npaths string.\n\nIf a FieldMask object is not present in a get operation, the\noperation applies to all fields (as if a FieldMask of all fields\nhad been specified).\n\nNote that a field mask does not necessarily apply to the\ntop-level response message. In case of a REST get operation, the\nfield mask applies directly to the response, but in case of a REST\nlist operation, the mask instead applies to each individual message\nin the returned resource list. In case of a REST custom method,\nother definitions may be used. Where the mask applies will be\nclearly documented together with its declaration in the API.  In\nany case, the effect on the returned resource/resources is required\nbehavior for APIs.\n\n# Field Masks in Update Operations\n\nA field mask in update operations specifies which fields of the\ntargeted resource are going to be updated. The API is required\nto only change the values of the fields as specified in the mask\nand leave the others untouched. If a resource is passed in to\ndescribe the updated values, the API ignores the values of all\nfields not covered by the mask.\n\nIf a repeated field is specified for an update operation, the existing\nrepeated values in the target resource will be overwritten by the new values.\nNote that a repeated field is only allowed in the last position of a `paths`\nstring.\n\nIf a sub-message is specified in the last position of the field mask for an\nupdate operation, then the existing sub-message in the target resource is\noverwritten. Given the target message:\n\n    f {\n      b {\n        d : 1\n        x : 2\n      }\n      c : 1\n    }\n\nAnd an update message:\n\n    f {\n      b {\n        d : 10\n      }\n    }\n\nthen if the field mask is:\n\n paths: \"f.b\"\n\nthen the result will be:\n\n    f {\n      b {\n        d : 10\n      }\n      c : 1\n    }\n\nHowever, if the update mask was:\n\n paths: \"f.b.d\"\n\nthen the result would be:\n\n    f {\n      b {\n        d : 10\n        x : 2\n      }\n      c : 1\n    }\n\nIn order to reset a field's value to the default, the field must\nbe in the mask and set to the default value in the provided resource.\nHence, in order to reset all fields of a resource, provide a default\ninstance of the resource and set all fields in the mask, or do\nnot provide a mask as described below.\n\nIf a field mask is not present on update, the operation applies to\nall fields (as if a field mask of all fields has been specified).\nNote that in the presence of schema evolution, this may mean that\nfields the client does not know and has therefore not filled into\nthe request will be reset to their default. If this is unwanted\nbehavior, a specific service may require a client to always specify\na field mask, producing an error if not.\n\nAs with get operations, the location of the resource which\ndescribes the updated values in the request message depends on the\noperation kind. In any case, the effect of the field mask is\nrequired to be honored by the API.\n\n## Considerations for HTTP REST\n\nThe HTTP kind of an update operation which uses a field mask must\nbe set to PATCH instead of PUT in order to satisfy HTTP semantics\n(PUT must only be used for full updates).\n\n# JSON Encoding of Field Masks\n\nIn JSON, a field mask is encoded as a single string where paths are\nseparated by a comma. Fields name in each path are converted\nto/from lower-camel naming conventions.\n\nAs an example, consider the following message declarations:\n\n    message Profile {\n      User user = 1;\n      Photo photo = 2;\n    }\n    message User {\n      string display_name = 1;\n      string address = 2;\n    }\n\nIn proto a field mask for `Profile` may look as such:\n\n    mask {\n      paths: \"user.display_name\"\n      paths: \"photo\"\n    }\n\nIn JSON, the same mask is represented as below:\n\n    {\n      mask: \"user.displayName,photo\"\n    }\n\n# Field Masks and Oneof Fields\n\nField masks treat fields in oneofs just as regular fields. Consider the\nfollowing message:\n\n    message SampleMessage {\n      oneof test_oneof {\n        string name = 4;\n        SubMessage sub_message = 9;\n      }\n    }\n\nThe field mask can be:\n\n    mask {\n      paths: \"name\"\n    }\n\nOr:\n\n    mask {\n      paths: \"sub_message\"\n    }\n\nNote that oneof type names (\"test_oneof\" in this case) cannot be used in\npaths.\n\n## Field Mask Verification\n\nThe implementation of any API method which has a FieldMask type field in the\nrequest should verify the included field paths, and return an\n`INVALID_ARGUMENT` error if any path is duplicated or unmappable.",
       "title": "`FieldMask` represents a set of symbolic field paths, for example:"
     },
-    "v1CreateHomeRequest": {
+    "v1CreateFlatRequest": {
       "type": "object",
       "properties": {
-        "home": {
-          "$ref": "#/definitions/v1Home"
+        "flat": {
+          "$ref": "#/definitions/v1Flat"
         }
       }
     },
-    "v1CreateHomeResponse": {
+    "v1CreateFlatResponse": {
       "type": "object",
       "properties": {
         "id": {
@@ -438,23 +438,7 @@
         }
       }
     },
-    "v1GetHomeResponse": {
-      "type": "object",
-      "properties": {
-        "home": {
-          "$ref": "#/definitions/v1Home"
-        }
-      }
-    },
-    "v1GetPurchaseResponse": {
-      "type": "object",
-      "properties": {
-        "purchase": {
-          "$ref": "#/definitions/v1Purchase"
-        }
-      }
-    },
-    "v1Home": {
+    "v1Flat": {
       "type": "object",
       "properties": {
         "id": {
@@ -468,13 +452,29 @@
         }
       }
     },
-    "v1ListHomesResponse": {
+    "v1GetFlatResponse": {
       "type": "object",
       "properties": {
-        "home": {
+        "flat": {
+          "$ref": "#/definitions/v1Flat"
+        }
+      }
+    },
+    "v1GetPurchaseResponse": {
+      "type": "object",
+      "properties": {
+        "purchase": {
+          "$ref": "#/definitions/v1Purchase"
+        }
+      }
+    },
+    "v1ListFlatsResponse": {
+      "type": "object",
+      "properties": {
+        "flat": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/v1Home"
+            "$ref": "#/definitions/v1Flat"
           },
           "title": "See https://github.com/GoogleCloudPlatform/google-cloud-go/blob/master/monitoring/apiv3/metric_client.go#L137"
         },
@@ -512,7 +512,7 @@
         "id": {
           "type": "string"
         },
-        "home_id": {
+        "flat_id": {
           "type": "string"
         },
         "user_id": {
@@ -535,11 +535,11 @@
         }
       }
     },
-    "v1UpdateHomeRequest": {
+    "v1UpdateFlatRequest": {
       "type": "object",
       "properties": {
-        "home": {
-          "$ref": "#/definitions/v1Home"
+        "flat": {
+          "$ref": "#/definitions/v1Flat"
         },
         "update_mask": {
           "$ref": "#/definitions/protobufFieldMask",
